fix(global): fix scss text mixin & sidebar & axios instance config

--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -15,7 +15,7 @@
 @mixin text(
   $font-weight,
   $font-size,
-  $color: normal,
+  $color: inherit,
   $line-height: normal,
   $font-family: $regular-font-family
 ) {
