--- a/src/assets/scss/common/base.scss
+++ b/src/assets/scss/common/base.scss
@@ -5,14 +5,14 @@
 
 *:before,
 *:after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   font-family: $font-family;
-  color: $default-font-color;
+  color: $text-color;
   overflow: hidden;
-  background-color: $white;
+  background-color: $color-white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -27,19 +27,58 @@ body {
   height: 100%;
 }
 
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+form,
+fieldset,
+legend,
+input,
+textarea,
+p,
+blockquote,
+th,
+td,
+hr,
+button,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   margin: 0;
   padding: 0;
 }
 
-button, input, select, textarea {
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
-input::-ms-clear, input::-ms-reveal {
-    display: none;
+input::-ms-clear,
+input::-ms-reveal {
+  display: none;
 }
 
 li {
@@ -47,37 +86,41 @@ li {
 }
 
 a {
-    color: $link-color;
-    background: transparent;
+  color: $link-color;
+  background: transparent;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  transition: color $transition-time ease;
+
+  &:hover {
+    color: $link-hover-color;
+  }
+
+  &:active {
+    color: $link-active-color;
+  }
+
+  &:active,
+  &:hover {
+    outline: 0;
     text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    transition: color $transition-time ease;
+  }
 
-    &:hover {
-        color: $link-hover-color;
-    }
-
-    &:active {
-        color: $link-active-color;
-    }
-
-    &:active,
-    &:hover {
-        outline: 0;
-        text-decoration: none;
-    }
-
-    &[disabled] {
-        color: #ccc;
-        cursor: $cursor-disabled;
-        pointer-events: none;
-    }
+  &[disabled] {
+    color: #ccc;
+    cursor: $cursor-disabled;
+    pointer-events: none;
+  }
 }
 
 code,
 kbd,
 pre,
 samp {
-    font-family: $code-family;
+  font-family: $code-family;
+}
+
+canvas {
+  outline: none;
 }
